--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
       <section class="bio">
           <h2>About Me</h2>
-          <p>Hello! I'm Your Name, a web developer with a passion
+          <p>Hello! I'm Piyush Chauhan, a web developer with a passion
               for front-end design and user experience.
               I've been building websites for over 5 years
                 and love what I do.</p>
